# difftree

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  justfile  lstr_comprehensive_analysis.md  release-please-config.json
.claude/: settings.json
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  docs.yml  publish.yml  release-please.yml  release.yml
assets/: demo.tape
docs/: RELEASE.md
docs/PRD/: difftree-prd-v0.2.md
docs/goals/: difftree-goal-v0.2.md
docs/specs/: difftree-decisions-v0.2.md
docs/superpowers/plans/: 2026-06-21-view-and-comparison-flags.md  2026-06-27-comparison-view-color.md  2026-06-27-pr-diff-shortcut.md  2026-06-28-copy-unreadable-statuses.md  2026-06-28-json-all-commands.md
docs/superpowers/specs/: 2026-06-21-view-and-comparison-flags-design.md  2026-06-27-comparison-view-color-design.md  2026-06-27-pr-diff-shortcut-design.md
examples/: README.md
examples/sample-directory/: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json
examples/sample-directory/.hidden/: .config  .secrets
examples/sample-directory/assets/data/: config.yaml  sample.csv
examples/sample-directory/docs/: api.md  changelog.txt
examples/sample-directory/src/: lib.rs  main.rs
examples/sample-directory/src/tests/: integration.rs  unit_tests.rs
examples/sample-directory/src/utils/: config.json  helpers.rs
src/: app.rs  lib.rs  main.rs  sort.rs  tui.rs  utils.rs  view.rs
tests/: cli.rs
